--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "memory allocation using segmentation",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"memory-allocation\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs-electron": "^2.1.1",
-    "electron": "^13.0.0"
+    "electron": "^13.0.0",
+    "electron-builder": "^22.10.5",
+    "electron-ejs": "^1.2.1",
+    "electron-packager": "^15.2.0"
   }
 }
