input handling, to be continued

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "memory allocation using segmentation",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
+    "start": "electron . --disable-http-cache",
     "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"memory-allocation\""
   },
   "author": "",
