--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "electron": "^13.0.0",
     "electron-builder": "^22.10.5",
     "electron-ejs": "^1.2.1",
-    "electron-packager": "^15.2.0"
+    "electron-packager": "^15.2.0",
+    "lodash": "^4.17.21"
   }
 }
