--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "animejs": "^3.2.1",
     "electron": "^13.0.0",
     "electron-builder": "^22.10.5",
     "electron-ejs": "^1.2.1",
